# minigrc

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: audit.py  aws_connector.py  cli.py  config.py  connections.py  crypto.py  csv_import.py  db.py  deps.py  flash.py  google_drive.py  google_drive_approvals.py  google_oidc.py  google_oidc_config.py  google_workspace_directory.py  import_directory.py  imports.py  jobs.py  logging_config.py  main.py  markdown_render.py  models.py  progress.py  requirements.py  secrets.py  security.py  seed.py  storage.py  trust_center.py  uploads.py  vendor_flags.py  vendor_roster_import.py  worker.py
app/registers/: __init__.py  config.py  router.py
app/routers/: admin.py  admin_authentication.py  admin_connections.py  admin_jobs.py  admin_users.py  audit_log.py  auth.py  aws_connector.py  connections.py  controls.py  dashboard.py  evidence.py  frameworks.py  google_drive.py  google_oidc.py  people.py  placeholders.py  policies.py  risks.py  trust_center.py  trust_center_public.py  vendor_systems.py
docs/: architecture.md  product-scope.md
migrations/: env.py
tests/: conftest.py  test_admin.py  test_admin_connections.py  test_admin_jobs.py  test_admin_users.py  test_auth.py  test_aws_connector.py  test_break_glass.py  test_cli.py  test_connections.py  test_connections_router.py  test_credential_leakage.py  test_db_init.py  test_drive_approvals_and_directory.py  test_framework_control_relationship.py  test_google_drive.py  test_google_oidc.py  test_google_oidc_db_config.py  test_import_directory.py  test_imports.py  test_imports_router.py  test_jobs.py  test_markdown_render.py  test_pages.py  test_people.py  test_policies.py  test_postgres_compat.py  test_register_api.py  test_requirements.py  test_requirements_register_api.py  test_risks.py  test_secrets.py  test_sqlite_integrity.py  test_trust_center.py  test_trust_center_public.py  test_trust_center_router.py  test_vendor_roster.py  test_vendor_systems.py
(+118 files in other folders)
