[project]
name = "playground-grc"
version = "0.1.0"
description = "Lightweight internal ISMS/GRC application for operating an ISO 27001 program."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `Depends(...)` in a default argument is the documented,
# idiomatic pattern, not the mutable-default-argument bug this rule targets.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
