[project]
name = "minigrc"
version = "0.2.0"
description = "Lightweight, self-hosted ISMS/GRC application for operating a single-organization compliance program."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "pwdlib[argon2]>=0.2.1",
    "alembic>=1.13",
    "httpx>=0.27",
    "google-auth>=2.34",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `Depends(...)` in a default argument is the documented,
# idiomatic pattern, not the mutable-default-argument bug this rule targets.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
